2004-12-12  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* Makefile.am: add new files
	* weather.c: (requests_init), (request_done),
	(requests_done_check): remove "static" for new files
	(calc_apparent): fix bug in wind-chill calculations (#160572)
	* weather.h: add defines, entry points needed for new files
	* weather-metar.c, weather-iwin.c, weather-bom.c, weather-met.c,
	weather-wx.c (Added): break out parsing of weather conditions
	out into separate files

2004-12-11  Simos Xenitellis  <simos@gnome.org>

	* Locations.xml.in: Updated entries related to Greece.
	Assigned remote airports to near-by cities.

2004-12-09  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* weather.c: (metar_tok_time), (metar_tok_wind), (metar_tok_vis),
	(metar_tok_cloud), (metar_tok_pres), (metar_tok_temp),
	(metar_tok_cond), (metar_parse):  Change parsing code to allow
	regular expressions to include spaces

2004-12-05  Davyd Madeley  <davyd@madeley.id.au>

	* weather.c: Updated regexp and parsing of the visibility data field
	  to include international standard as well as a wider variety of
	  values in the US exception to it.
	  http://www.met.tamu.edu/class/METAR/metar-pg7-vis.html

	  Closes #151896 and 160475. Patch from Frank Solensky
	  <frank@solensky.org>.

2004-12-04  Danilo Šegan  <dsegan@gmx.net>

	* Locations.xml.in: Clean up Serbia and Montenegro entries, move
	BIH cities into Bosnia and Herzegovina section, fix "Slavonski"
	(Croatia) to be "Slavonski Brod".  Also, s/>>/>/.

2004-11-30  James Henstridge  <james@jamesh.id.au>

	* gweather-xml.c (gweather_xml_load_locations): when starting to
	read the locations file, fast forward to the first element node,
	in order to skip doctypes, comments, PIs, etc at the start of the
	document.

	* Makefile.am (EXTRA_DIST): install locations.dtd.

	* Locations.xml.in: add a DOCTYPE declaration to the top of the file.
