@@ -21843,35 +21843,41 @@
   <country>
     <_name>Sweden</_name>
     <location>
-      <_name>Angelholm</_name>
+      <_name>Ängelholm</_name>
       <code>ESDB</code>
       <coordinates>56-18N 012-51E</coordinates>
     </location>
     <location>
-      <_name>Borlange</_name>
+      <_name>Borlänge</_name>
       <code>ESSD</code>
       <coordinates>60-26N 015-31E</coordinates>
     </location>
     <location>
-      <_name>Gallivare</_name>
+      <_name>Gällivare</_name>
       <code>ESNG</code>
       <coordinates>67-09N 020-39E</coordinates>
     </location>
     <location>
-      <_name>Gavle</_name>
+      <_name>Gävle</_name>
       <code>ESSK</code>
       <coordinates>60-36N 016-57E</coordinates>
     </location>
-    <location>
-      <_name>Goteborg (Landvetter)</_name>
-      <code>ESGG</code>
-      <coordinates>57-40N 012-18E</coordinates>
-    </location>
-    <location>
-      <_name>Goteborg (Save)</_name>
-      <code>ESGP</code>
-      <coordinates>57-47N 011-53E</coordinates>
-    </location>
+    <city>
+      <!-- This is the second largest city in Sweden. Its native name is "Göteborg". -->
+      <_name>Gothenburg</name>
+      <location>
+        <!-- This is the name of a Gothenburg (Göteborg) airport.  -->
+        <_name>Landvetter</_name>
+        <code>ESGG</code>
+        <coordinates>57-40N 012-18E</coordinates>
+      </location>
+      <location>
+        <!-- This is the name of a Gothenburg (Göteborg) airport.  -->
+        <_name>Säve</_name>
+        <code>ESGP</code>
+        <coordinates>57-47N 011-53E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Gunnarn</_name>
       <code>ESPD</code>
@@ -21898,7 +21904,7 @@
       <coordinates>66-38N 019-39E</coordinates>
     </location>
     <location>
-      <_name>Jonkoping</_name>
+      <_name>Jönköping</_name>
       <code>ESGJ</code>
       <coordinates>57-46N 014-05E</coordinates>
     </location>
@@ -21922,19 +21928,25 @@
       <code>ESNK</code>
       <coordinates>63-03N 017-46E</coordinates>
     </location>
-    <location>
-      <_name>Kristianstad/Everod</_name>
-      <code>ESMK</code>
-      <coordinates>55-55N 014-05E</coordinates>
-    </location>
     <city>
-     <_name>Linkoping</_name>
+      <_name>Kristianstad</_name>
+      <location>
+        <!-- This is the name of an airport outside of Kristianstad, Sweden. -->
+        <_name>Everöd</_name>
+        <code>ESMK</code>
+        <coordinates>55-55N 014-05E</coordinates>
+      </location>
+    </city>
+    <city>
+     <_name>Linköping</_name>
      <location>
+       <!-- This is the name of an airport in Linköping, Sweden. -->
        <_name>Malmen</_name>
        <code>ESCF</code>
        <coordinates>58-24N 015-31E</coordinates>
      </location>
      <location>
+       <!-- This is the name of an airport in Linköping, Sweden. -->
        <_name>Saab</_name>
        <code>ESSL</code>
        <coordinates>58-24N 015-41E</coordinates>
@@ -21953,48 +21965,60 @@
        <coordinates>56-05-07N 013-12-26E</coordinates>
      </location>
     </city>
-    <location>
-      <_name>Lulea/Kallax</_name>
-      <code>ESPA</code>
-      <coordinates>65-33N 022-08E</coordinates>
-    </location>
+    <city>
+      <_name>Luleå</_name>
+      <location>
+        <!-- This is the name of an airport in Luleå, Sweden. -->
+        <_name>Kallax</_name>
+        <code>ESPA</code>
+        <coordinates>65-33N 022-08E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Lycksele</_name>
       <code>ESNL</code>
       <coordinates>64-32-51N 018-43-03E</coordinates>
     </location>
+    <city>
+      <_name>Malmö</_name>
+      <location>
+        <!-- This is the name of an airport outside of Malmö, Sweden. -->
+        <_name>Sturup</_name>
+        <code>ESMS</code>
+        <coordinates>55-33N 013-22E</coordinates>
+      </location>
+    </city>
     <location>
-      <_name>Malmo/Sturup</_name>
-      <code>ESMS</code>
-      <coordinates>55-33N 013-22E</coordinates>
-    </location>
-    <location>
-      <_name>Norrkoping</_name>
+      <_name>Norrköping</_name>
       <code>ESSP</code>
       <coordinates>58-35N 016-09E</coordinates>
     </location>
     <location>
-      <_name>Orebro</_name>
+      <_name>Örebro</_name>
       <code>ESOE</code>
       <coordinates>59-14N 015-03E</coordinates>
     </location>
     <location>
-      <_name>Ornskoldsvik</_name>
+      <_name>Örnsköldsvik</_name>
       <code>ESNO</code>
       <coordinates>63-24N 018-58E</coordinates>
     </location>
-    <location>
-      <_name>Ostersund/Froson</_name>
-      <code>ESPC</code>
-      <coordinates>63-11N 014-30E</coordinates>
-    </location>
+    <city>
+      <_name>Östersund</_name>
+      <location>
+        <!-- This is the name of an airport outside of Östersund, Sweden. -->
+        <_name>Frösön</_name>
+        <code>ESPC</code>
+        <coordinates>63-11N 014-30E</coordinates>
+      </location>
+    </city>
     <location>
       <_name>Ronneby</_name>
       <code>ESDF</code>
       <coordinates>56-16N 015-17E</coordinates>
     </location>
     <location>
-      <_name>Satenas</_name>
+      <_name>Såtenäs</_name>
       <code>ESIB</code>
       <coordinates>58-26N 012-42E</coordinates>
     </location>
@@ -22004,47 +22028,53 @@
       <coordinates>60-58N 014-31E</coordinates>
     </location>
     <location>
-      <_name>Skavasta/Stockholm</_name>
-      <code>ESKN</code>
-      <coordinates>58-47N 016-55E</coordinates>
-    </location>
-    <location>
-      <_name>Skelleftea</_name>
+      <_name>Skellefteå</_name>
       <code>ESNS</code>
       <coordinates>64-38N 021-05E</coordinates>
     </location>
     <location>
-      <_name>Skovde</_name>
+      <_name>Skövde</_name>
       <code>ESGR</code>
       <coordinates>58-27N 013-58E</coordinates>
     </location>
     <location>
-      <_name>Soderhamn</_name>
+      <_name>Söderhamn</_name>
       <code>ESNY</code>
       <coordinates>61-15-41N 017-05-57E</coordinates>
     </location>
+    <city>
+      <_name>Stockholm</_name>
+      <location>
+        <!-- This is the name of an airport outside of Stockholm, Sweden. -->
+        <_name>Arlanda</_name>
+        <code>ESSA</code>
+        <coordinates>59-39N 017-57E</coordinates>
+      </location>
+      <location>
+        <!-- This is the name of an airport in Stockholm, Sweden. -->
+        <_name>Bromma</_name>
+        <code>ESSB</code>
+        <coordinates>59-21N 017-57E</coordinates>
+      </location>
+      <location>
+        <!-- This is the name of an airport outside of Stockholm, Sweden. -->
+        <_name>Skavsta</_name>
+        <code>ESKN</code>
+        <coordinates>58-47N 016-55E</coordinates>
+      </location>
+    </city>
     <location>
-      <_name>Stockholm (Arlanda)</_name>
-      <code>ESSA</code>
-      <coordinates>59-39N 017-57E</coordinates>
-    </location>
-    <location>
-      <_name>Stockholm (Bromma)</_name>
-      <code>ESSB</code>
-      <coordinates>59-21N 017-57E</coordinates>
-    </location>
-    <location>
-      <_name>Sundsvall-Harnosand</_name>
+      <_name>Sundsvall-Härnösand</_name>
       <code>ESNN</code>
       <coordinates>62-32N 017-27E</coordinates>
     </location>
     <location>
-      <_name>Trollhattan</_name>
+      <_name>Trollhättan</_name>
       <code>ESGT</code>
       <coordinates>58-19N 012-21E</coordinates>
     </location>
     <location>
-      <_name>Umea</_name>
+      <_name>Umeå</_name>
       <code>ESNU</code>
       <coordinates>63-48N 020-17E</coordinates>
     </location>
@@ -22053,13 +22083,17 @@
       <code>ESCM</code>
       <coordinates>59-53N 017-36E</coordinates>
     </location>
+    <city>
+      <_name>Västerås</_name>
+      <location>
+        <!-- This is in Västerås, Sweden. -->
+        <_name>Hässlö</_name>
+        <code>ESOW</code>
+        <coordinates>59-35N 016-38E</coordinates>
+      </location>
+    </city>
     <location>
-      <_name>Vasteras/Hasslo</_name>
-      <code>ESOW</code>
-      <coordinates>59-35N 016-38E</coordinates>
-    </location>
-    <location>
-      <_name>Vaxjo</_name>
+      <_name>Växjö</_name>
       <code>ESMX</code>
       <coordinates>56-51N 014-50E</coordinates>
     </location>
