@@ -1,3 +1,7 @@
+2004-12-18  Christian Rose  <menthos@menthos.com>
+
+	* Locations.xml.in: Updated Swedish airports.
+
 2004-12-12  Frank Solensky  <frank@solensky.org>
 
 	reviewed by: Davyd Madeley <davyd@madeley.id.au>
